--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,10 +33,8 @@ jobs:
         run: |
           $parts = @("${{ steps.tagName.outputs.tag }}" -split "-")
           $version = $parts[0]
-          $channel = if ($parts[1]) {$parts[1]} else {""}
-          $revision = $channel.GetEnumerator() | % { [int] $_ } | Measure -Sum | Select -ExpandProperty Sum
           $parsedVersion = [Version] $version
-          $packageVersion = New-Object Version @($parsedVersion.Major, $parsedVersion.Minor, $parsedVersion.Build, $revision)
+          $packageVersion = New-Object Version @($parsedVersion.Major, $parsedVersion.Minor, $parsedVersion.Build, 0)
           [string] $strVersion = $packageVersion.ToString(4)
           [string] $strShortVersion = $packageVersion.ToString(3)
           echo "::set-output name=version::$strVersion"
@@ -97,15 +95,16 @@ jobs:
           7z a -mx9 -tzip "${{ env.ARTIFACT_PATH }}/${{ matrix.project.name }}-${{ needs.release-preparation.outputs.version }}-${{ matrix.platform }}-Sideload.zip" "$Folder/*"
       - name: Pull up msix and symbol files
         run: |
+          Get-ChildItem "${{ env.ARTIFACT_PATH }}/*/*.msixsym" | Rename-Item -NewName { [IO.Path]::ChangeExtension($_.Name, "appxsym") }
           Get-ChildItem "${{ env.ARTIFACT_PATH }}/*/*.msix" | Move-Item -Destination "${{ env.ARTIFACT_PATH }}"
-          Get-ChildItem "${{ env.ARTIFACT_PATH }}/*/*.msixsym" | Move-Item -Destination "${{ env.ARTIFACT_PATH }}"
+          Get-ChildItem "${{ env.ARTIFACT_PATH }}/*/*.appxsym" | Move-Item -Destination "${{ env.ARTIFACT_PATH }}"
       - name: Upload platform build artifacts
         uses: actions/upload-artifact@v2
         with:
           name: ${{ matrix.project.name }}-platforms # each job will extend the artifact upload with new platform specific files
           path: |
             ${{ env.ARTIFACT_PATH }}/*.msix
-            ${{ env.ARTIFACT_PATH }}/*.msixsym
+            ${{ env.ARTIFACT_PATH }}/*.appxsym
       - name: Upload platform sideload artifacts
         uses: actions/upload-artifact@v2
         with:
@@ -145,7 +144,7 @@ jobs:
           certificate-private-key: ${{ secrets.APPX_CERTIFICATE_PASSWORD }}
       - name: Create msixupload
         run: |
-          7z a -mx9 -tzip "${{ env.ARTIFACT_PATH }}/${{ matrix.project-name }}.msixupload" "${{ env.ARTIFACT_PATH }}/*.msixsym" "${{ env.ARTIFACT_PATH }}/*.msixbundle"
+          7z a -mx9 -tzip "${{ env.ARTIFACT_PATH }}/${{ matrix.project-name }}.msixupload" "${{ env.ARTIFACT_PATH }}/*.appxsym" "${{ env.ARTIFACT_PATH }}/*.msixbundle"
       - name: Upload bundle artifact
         uses: actions/upload-artifact@v2
         with:
