--- a/PackageInstaller/Properties/launchSettings.json
+++ b/PackageInstaller/Properties/launchSettings.json
@@ -2,16 +2,15 @@
   "profiles": {
     "PackageInstaller (Package)": {
       "commandName": "MsixPackage",
-        "environmentVariables": {
-            "PROFILE_IS_PACKAGED": "true"
-        }
+      "environmentVariables": {
+      },
+      "nativeDebugging": true
     },
     "PackageInstaller (Unpackaged)": {
       "commandName": "Project",
-      "nativeDebugging": true,
       "environmentVariables": {
-        "PROFILE_IS_PACKAGED": "false"
-      }
+      },
+      "nativeDebugging": true
     }
   }
 }
