--- a/Winstrumenta.Package.Tests/Winstrumenta.Package.Tests.csproj
+++ b/Winstrumenta.Package.Tests/Winstrumenta.Package.Tests.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
     <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
+    <PackageReference Include="System.Management" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
