--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Windows.Tests.e2e"]
 	path = Windows.Tests.e2e
-	url = https://github.com/Gitii/Winstrumenta.e2e.git
+	url = ../Winstrumenta.e2e.git
