--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -46,4 +46,5 @@ jobs:
       - name: Build
         run: msbuild /m /t:build /restore /p:Configuration=Release /p:Platform=${{ matrix.platform }} /p:AppxPackage=false /m Winstrumenta.sln
       - name: Test
+        if: ${{ matrix.platform != 'arm64' }} # skip arm64 tests since github runners are only x86 and x64 but not arm64
         run: Get-ChildItem -Recurse -Filter "*.Tests.dll" | ? { $_.FullName -Match "bin.[^.]+.Release" -and $_.FullName -notmatch "ref" } | % { vstest.console.exe $_.FullName }
