Basic end-to-end test setup (#15)
* Basic integration test setup

* Migrate to unpackaged

* Support packaged and unpacked profiles

* Add some basic e2e tests

* Added packer for win10/11 images

* Add packer scripts

* Include sub directories

* Restructure

* Restructure

* Updated workflow

* Add dispatch

* Install node

* Improvements

Cleanup

Fix boot

Fix boot

Fix paths

Fix path

Refactor

Enable for all ports

Cleanup names

Install packer

Refactor

Fix step

Fix actions

* Allow access to private sub modules

* Extend e2e tests

* trigger build pipeline

* Use bash

* Update submodule

* Change submodule url

* Simplify checkout

* Fix lint errors

* Skip tests when arm64

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -28,6 +28,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          submodules: true
+          ssh-key: ${{ secrets.WINSTRUMENTA_E2E_SSH_PRIVATE_KEY }}
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v1
         with:
@@ -43,4 +46,5 @@ jobs:
       - name: Build
         run: msbuild /m /t:build /restore /p:Configuration=Release /p:Platform=${{ matrix.platform }} /p:AppxPackage=false /m Winstrumenta.sln
       - name: Test
+        if: ${{ matrix.platform != 'arm64' }} # skip arm64 tests since github runners are only x86 and x64 but not arm64
         run: Get-ChildItem -Recurse -Filter "*.Tests.dll" | ? { $_.FullName -Match "bin.[^.]+.Release" -and $_.FullName -notmatch "ref" } | % { vstest.console.exe $_.FullName }
