--- a/PackageInstaller/Properties/launchSettings.json
+++ b/PackageInstaller/Properties/launchSettings.json
@@ -1,10 +1,16 @@
 {
   "profiles": {
     "PackageInstaller (Package)": {
-      "commandName": "MsixPackage"
+      "commandName": "MsixPackage",
+      "environmentVariables": {
+      },
+      "nativeDebugging": true
     },
     "PackageInstaller (Unpackaged)": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "environmentVariables": {
+      },
+      "nativeDebugging": true
     }
   }
 }
