--- a/NativeInterop.Win32/NativeInterop.Win32.csproj
+++ b/NativeInterop.Win32/NativeInterop.Win32.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
         <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
@@ -21,6 +21,6 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.1" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230217.4" />
     </ItemGroup>
 </Project>
