--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -1,3 +1,3 @@
-feature: ['feature/*', 'feat/*']
+feature: ["feature/*", "feat/*"]
 fix: fix/*
-other: ['chore/*', 'other/*']
+other: ["chore/*", "other/*"]
