--- a/PackageInstaller/PackageInstaller.csproj
+++ b/PackageInstaller/PackageInstaller.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
         <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
@@ -157,11 +157,11 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
         <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230217.4" />
         <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
-        <PackageReference Include="ReactiveUI" Version="18.0.10" />
-        <PackageReference Include="ReactiveUI.WinUI" Version="18.0.10" />
-        <PackageReference Include="Scrutor" Version="4.1.0" />
+        <PackageReference Include="ReactiveUI" Version="18.4.25" />
+        <PackageReference Include="ReactiveUI.WinUI" Version="18.4.25" />
+        <PackageReference Include="Scrutor" Version="4.2.1" />
         <PackageReference Include="Sextant" Version="2.12.4" />
-        <PackageReference Include="SharpNinja.Extensions.WindowsAppSdkHost" Version="1.1.2" />
+        <PackageReference Include="SharpNinja.Extensions.WindowsAppSdkHost" Version="1.2.0" />
         <PackageReference Include="Splat" Version="14.6.8" />
         <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="14.6.8" />
         <PackageReference Include="Splat.Microsoft.Extensions.Logging" Version="14.6.8" />
@@ -173,10 +173,14 @@
     <ItemGroup>
         <ProjectReference Include="..\NativeInterop.Win32.Xaml\NativeInterop.Win32.Xaml.csproj" />
         <ProjectReference Include="..\NativeInterop.Win32\NativeInterop.Win32.csproj" />
-        <ProjectReference Include="..\PackageInstaller.Core.Services.WinUI\PackageInstaller.Core.Services.WinUI.csproj" />
+        <ProjectReference
+            Include="..\PackageInstaller.Core.Services.WinUI\PackageInstaller.Core.Services.WinUI.csproj"
+        />
         <ProjectReference Include="..\PackageInstaller.Core.Services\PackageInstaller.Core.Services.csproj" />
         <ProjectReference Include="..\PackageInstaller.Core\PackageInstaller.Core.csproj" />
-        <ProjectReference Include="..\Shared.Services.Implementations.Winui\Shared.Services.Implementations.WinUI.csproj" />
+        <ProjectReference
+            Include="..\Shared.Services.Implementations.Winui\Shared.Services.Implementations.WinUI.csproj"
+        />
         <ProjectReference Include="..\Shared.Services.Implementations\Shared.Services.Implementations.csproj" />
     </ItemGroup>
 
