--- a/PackageInstaller/PackageInstaller.csproj
+++ b/PackageInstaller/PackageInstaller.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
         <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
@@ -148,24 +148,24 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="ArrayDeconstructors.Source" Version="1.0.3">
+        <PackageReference Include="ArrayDeconstructors.Source" Version="1.0.4">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Community.Sextant.WinUI" Version="0.5.0" />
-        <PackageReference Include="Community.Sextant.WinUI.Microsoft.Extensions.DependencyInjection" Version="0.5.0" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.1" />
-        <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.197" />
-        <PackageReference Include="ReactiveUI" Version="18.0.10" />
-        <PackageReference Include="ReactiveUI.WinUI" Version="18.0.10" />
-        <PackageReference Include="Scrutor" Version="4.1.0" />
+        <PackageReference Include="Community.Sextant.WinUI" Version="0.6.1" />
+        <PackageReference Include="Community.Sextant.WinUI.Microsoft.Extensions.DependencyInjection" Version="0.6.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230217.4" />
+        <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+        <PackageReference Include="ReactiveUI" Version="18.4.25" />
+        <PackageReference Include="ReactiveUI.WinUI" Version="18.4.25" />
+        <PackageReference Include="Scrutor" Version="4.2.1" />
         <PackageReference Include="Sextant" Version="2.12.4" />
-        <PackageReference Include="SharpNinja.Extensions.WindowsAppSdkHost" Version="1.1.2" />
-        <PackageReference Include="Splat" Version="14.2.8" />
-        <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="14.2.8" />
-        <PackageReference Include="Splat.Microsoft.Extensions.Logging" Version="14.2.8" />
-        <PackageReference Include="Svg.Skia" Version="0.5.14" />
+        <PackageReference Include="SharpNinja.Extensions.WindowsAppSdkHost" Version="1.2.0" />
+        <PackageReference Include="Splat" Version="14.6.8" />
+        <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="14.6.8" />
+        <PackageReference Include="Splat.Microsoft.Extensions.Logging" Version="14.6.8" />
+        <PackageReference Include="Svg.Skia" Version="0.5.18" />
         <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
         <Manifest Include="$(ApplicationManifest)" />
     </ItemGroup>
@@ -173,10 +173,15 @@
     <ItemGroup>
         <ProjectReference Include="..\NativeInterop.Win32.Xaml\NativeInterop.Win32.Xaml.csproj" />
         <ProjectReference Include="..\NativeInterop.Win32\NativeInterop.Win32.csproj" />
-        <ProjectReference Include="..\PackageInstaller.Core.Services.WinUI\PackageInstaller.Core.Services.WinUI.csproj" />
+        <ProjectReference
+            Include="..\PackageInstaller.Core.Services.WinUI\PackageInstaller.Core.Services.WinUI.csproj"
+        />
         <ProjectReference Include="..\PackageInstaller.Core.Services\PackageInstaller.Core.Services.csproj" />
         <ProjectReference Include="..\PackageInstaller.Core\PackageInstaller.Core.csproj" />
-        <ProjectReference Include="..\Shared.Services.Implementations.Winui\Shared.Services.Implementations.WinUI.csproj" />
+        <ProjectReference
+            Include="..\Shared.Services.Implementations.Winui\Shared.Services.Implementations.WinUI.csproj"
+        />
+        <ProjectReference Include="..\Shared.Services.Implementations\Shared.Services.Implementations.csproj" />
     </ItemGroup>
 
     <ItemGroup>
