--- a/Shared.Services.Implementations.Winui/Shared.Services.Implementations.WinUI.csproj
+++ b/Shared.Services.Implementations.Winui/Shared.Services.Implementations.WinUI.csproj
@@ -3,15 +3,15 @@
         <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
         <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
         <SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
-        <RootNamespace>Shared.Services.Implementations.WinuiUI</RootNamespace>
+        <RootNamespace>Shared.Services.Implementations.WinUI</RootNamespace>
         <Platforms>x86;x64;arm64</Platforms>
         <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64;win-x86;win-x64;win-arm64</RuntimeIdentifiers>
         <UseWinUI>true</UseWinUI>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.1" />
-        <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.194" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230217.4" />
+        <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
     </ItemGroup>
 
     <ItemGroup>
