--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,8 @@ env:
 jobs:
   validate:
     uses: ./.github/workflows/validate.yml
+    secrets:
+      WINSTRUMENTA_E2E_SSH_PRIVATE_KEY: ${{ secrets.WINSTRUMENTA_E2E_SSH_PRIVATE_KEY }}
 
   release-preparation:
     runs-on: windows-2022
