--- a/PackageInstaller/Properties/launchSettings.json
+++ b/PackageInstaller/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PackageInstaller (Package)": {
       "commandName": "MsixPackage",
-      "commandLineArgs": "\"C:\\Users\\Germi\\Downloads\\gh_2.23.0_linux_amd64.deb\"",
+      "commandLineArgs": "",
       "nativeDebugging": true
     },
     "PackageInstaller (Unpackaged)": {
