Add a feature request button on the result page (#31)

--- a/PackageInstaller/Properties/launchSettings.json
+++ b/PackageInstaller/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PackageInstaller (Package)": {
       "commandName": "MsixPackage",
-      "commandLineArgs": "adawdawd",
+      "commandLineArgs": "",
       "nativeDebugging": true
     },
     "PackageInstaller (Unpackaged)": {
