Update all deps

--- a/NativeInterop.Win32.Xaml/NativeInterop.Win32.Xaml.csproj
+++ b/NativeInterop.Win32.Xaml/NativeInterop.Win32.Xaml.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
         <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230217.4" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230313.1" />
     </ItemGroup>
 
     <ItemGroup>
