--- a/Winstrumenta.Package.Tests/Winstrumenta.Package.Tests.csproj
+++ b/Winstrumenta.Package.Tests/Winstrumenta.Package.Tests.csproj
@@ -10,15 +10,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Appium.WebDriver" Version="4.3.1" />
+        <PackageReference Include="Appium.WebDriver" Version="4.4.0" />
         <PackageReference Include="FluentAssertions" Version="6.10.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
         <PackageReference Include="NUnit" Version="3.13.3" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-        <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
-        <PackageReference Include="coverlet.collector" Version="3.1.2" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
+        <PackageReference Include="NUnit.Analyzers" Version="3.6.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="coverlet.collector" Version="3.2.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
-        <PackageReference Include="System.Management" Version="6.0.0" />
+        <PackageReference Include="System.Management" Version="7.0.0" />
         <PackageReference Include="Community.Wsl.Sdk" Version="3.0.0" />
     </ItemGroup>
 </Project>
