--- a/Numbers/Numbers.csproj
+++ b/Numbers/Numbers.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
         <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
@@ -20,10 +20,13 @@
     <ItemGroup>
         <None Remove="Assets\error.png" />
         <None Remove="Controls\PlaceholderContainer.xaml" />
+        <None Remove="Controls\RecentlyUsedFileView.xaml" />
         <None Remove="Controls\Shimmer.xaml" />
+        <None Remove="NumbersLogo.png" />
         <None Remove="Pages\Error.xaml" />
         <None Remove="Pages\Preparation.xaml" />
         <None Remove="Pages\Save.xaml" />
+        <None Remove="Pages\Start.xaml" />
         <None Remove="Pages\Table.xaml" />
     </ItemGroup>
 
@@ -34,6 +37,7 @@
         <Content Include="Assets\Square44x44Logo.scale-200.png" />
         <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
         <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+        <Content Include="NumbersLogo.png" />
     </ItemGroup>
 
     <ItemGroup>
@@ -65,9 +69,7 @@
         <ProjectReference Include="..\Numbers.Core.Services\Numbers.Core.Services.csproj" />
         <ProjectReference Include="..\Numbers.Core\Numbers.Core.csproj" />
         <ProjectReference Include="..\Shared.Misc\Shared.Misc.csproj" />
-        <ProjectReference
-            Include="..\Shared.Services.Implementations.Winui\Shared.Services.Implementations.WinUI.csproj"
-        />
+        <ProjectReference Include="..\Shared.Services.Implementations.Winui\Shared.Services.Implementations.WinUI.csproj" />
         <ProjectReference Include="..\Shared.Services.Implementations\Shared.Services.Implementations.csproj" />
         <ProjectReference Include="..\Shared.Services\Shared.Services.csproj" />
     </ItemGroup>
@@ -78,6 +80,12 @@
         <None Update="MainWindow.xaml">
             <Generator>MSBuild:Compile</Generator>
         </None>
+        <Page Update="Controls\RecentlyUsedFileView.xaml">
+          <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+        </Page>
+        <Page Update="Pages\Start.xaml">
+            <Generator>MSBuild:Compile</Generator>
+        </Page>
         <Page Update="Pages\Table.xaml">
             <Generator>MSBuild:Compile</Generator>
         </Page>
@@ -105,9 +113,7 @@
     Explorer "Package and Publish" context menu entry to be enabled for this project even if 
     the Windows App SDK Nuget package has not yet been restored.
   -->
-    <PropertyGroup
-        Condition="'$(DisableHasPackageAndPublishMenuAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'"
-    >
+    <PropertyGroup Condition="'$(DisableHasPackageAndPublishMenuAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
         <HasPackageAndPublishMenu>true</HasPackageAndPublishMenu>
     </PropertyGroup>
 </Project>
